<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".m.ui.ui.login.view.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_centerVertical="true"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:text="@string/welcome"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textColor="@color/ColorTextWhite"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:elevation="36dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.3"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="36sp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/login"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="82sp"
                        android:layout_marginStart="48sp"
                        android:layout_marginEnd="48dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorTextBlack"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:counterTextColor="@color/colorTextBlack"
                        app:hintTextColor="@color/colorTextBlack"
                        app:placeholderTextColor="@color/colorTextBlack"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/seg_ui_semibold"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorTextBlack"
                            android:textColorHint="@color/colorTextBlack" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="82sp"
                        android:layout_marginStart="48sp"
                        android:layout_marginEnd="48dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorTextBlack"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:counterTextColor="@color/colorTextBlack"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/colorTextBlack"
                        app:placeholderTextColor="@color/colorTextBlack"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/seg_ui_semibold"
                            android:inputType="textPassword"
                            android:textColor="@color/colorTextBlack"
                            android:textColorHint="@color/colorTextBlack" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login_signin"
                        android:layout_width="match_parent"
                        android:layout_height="52sp"
                        android:layout_marginStart="48sp"
                        android:layout_marginTop="25sp"
                        android:layout_marginEnd="48sp"
                        android:background="@drawable/button_background"
                        android:fontFamily="@font/seg_ui_semibold"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/ColorTextWhite"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_login_register"
                        android:layout_width="match_parent"
                        android:layout_height="52sp"
                        android:layout_marginStart="130sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="130sp"
                        android:layout_marginBottom="480sp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextView"

                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>